crates/ferrumyx-runtime-core/src/cli/snapshots/runtime-core__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
expression: help
---
Ferrumyx Runtime Core is a secure AI assistant. Use 'ferrumyx-runtime-core <subcommand> --help' for details.
Examples:
  ferrumyx-runtime-core run  # Start the agent
  ferrumyx-runtime-core config list  # List configs

Usage: ferrumyx-runtime-core [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  doctor      Run diagnostics
  status      Show system status
  completion  Generate completions
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version


